--- a/sites/css/stylesheet.css
+++ b/sites/css/stylesheet.css
@@ -6,6 +6,12 @@ html, body {
 
 header {
     width:100%;
+    background: url(../img/background.png) no-repeat center center fixed;
+    -moz-background-size: cover;
+    -webkit-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+
 }
 
 .logo {
